Wed Feb 18 15:30:10 1998  Tom Yu  <tlyu@mit.edu>

	* Makefile.in: Remove trailing slash from thisconfigdir.  Fix up
	BUILDTOP for new conventions.

Fri Feb 13 22:23:34 1998  Theodore Y. Ts'o  <tytso@mit.edu>

	* ftpd.c: Applied lxs's changes to make ftpd safe for systems
		where sizeof(off_t) > sizeof(int).

Fri Feb 13 15:31:46 1998  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* Makefile.in (thisconfigdir), configure.in: Point the
 		configuration directory at our parent, and remove our
		local configure.in

Mon Feb  2 17:02:29 1998  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* Makefile.in: Define BUILDTOP and thisconfigdir in the Makefile

Fri Feb  6 13:25:28 1998  Theodore Y. Ts'o  <tytso@mit.edu>

	* popen.c (ftpd_popen): Make sure you can't overrun the argv[] and
		gargv[] arrays.  (Patch submitted by dima@best.net).

Thu Jan 29 19:51:02 1998  Dan Winship  <danw@mit.edu>

	* ftpd.c (auth_data): Accept forwarded credentials and dispose of
	them properly. (And fix some indentation bugs.)

Sun Dec 21 18:17:53 1997  Tom Yu  <tlyu@mit.edu>

	* logwtmp.c (ftp_logwtmp): Rename logwtmp to ftp_logwtmp to avoid
	collision with native logwtmp.  Also, return void rather than
	int.

	* ftpd.c: Rename logwtmp to ftp_logwtmp to avoid collision with
	native logwtmp.

Thu Dec 11 23:28:07 1997  Tom Yu  <tlyu@mit.edu>

	* ftpd.c: Don't include netdb.h or sys/socket.h if krb.h is
	included; this works around an Ultrix bug where those headers
	aren't protected against multiple inclusion.

Thu Oct 16 01:23:41 1997  Tom Yu  <tlyu@mit.edu>

	* Makefile.in: Change LOCALINCLUDE and the link line to allow for
	krb4 compatibility.

	* ftpd.c: Change KERBEROS to KRB5_KRB4_COMPAT where appropriate.
	(reply): Fix up braces around the check for auth_type ==
	"KERBEROS_V4" so that the nesting of if statements is correct.
	Various and sundry fixes from danw@mit.edu to make it work.

Thu Aug 28 23:48:27 1997  Sam Hartman  <hartmans@luminous.mesas.com>
